Apply ExcludeForHash annotation to Filter.
By that the newly added fields will not alter the byte array used for the hash and the signature, thus it will not cause issues with removing an old filter which did not inculde those new fields.

Signed-off-by: HenrikJannsen <boilingfrog@gmx.com>